[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn>=0.22.0",
    "fastapi>=0.95.1",
    "black>=23.3.0",
    "pytest-structlog>=0.6",
    "assertpy>=1.1",
    "pytest-randomly>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "gunicorn>=20.1.0",
]
[project]
name = "structlog-asgi"
version = "0.0.1"
description = "Eazy structlog configuration for asgi applications"
authors = [
    {name = "Nick Khitrov", email = "khitrov34@gmail.com"},
]
dependencies = [
    "structlog>=23.1.0",
    "structlog-sentry>=2.0.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}
